# engula

./: .editorconfig  .gitignore  .gitmodules  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE_TEMPLATE  Makefile  Makefile.toml  README.md  amd64.dockerfile  arm64.dockerfile  build.rs  docker-compose-dev.yml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml  taplo.toml
engula/: Cargo.toml  build.rs
engula/etc/: cloud-native.toml  default.toml  get-local.toml  get-remote.toml  put-local.toml  put-remote.toml
engula/examples/: hello.rs
engula/proto/: journal.proto
engula/src/: common.rs  database.rs  entry.rs  error.rs  journal.rs  lib.rs  main.rs  memtable.rs  storage.rs  version_set.rs  write.rs
engula/src/cache/: lru_cache.rs  mod.rs
engula/src/compaction/: compaction.proto  compaction_service.rs  local_compaction.rs  mod.rs  remote_compaction.rs
engula/src/file_system/: file_system.proto  file_system.rs  local_file_system.rs  mod.rs  remote_file_system.rs  s3.rs  service.rs
engula/src/filter/: mod.rs
engula/src/format/: block.rs  bloom_filter.rs  cache.rs  filter.rs  format.proto  iterator.rs  merging_iterator.rs  mod.rs  parquet_builder.rs  parquet_table.rs  sst.rs  sst_builder.rs  sstable.rs  table.rs  table_builder.rs  two_level_iterator.rs
engula/src/fs/: fs.proto  fs_service.rs  local_fs.rs  mod.rs  remote_fs.rs  s3_fs.rs
engula/src/job/: compaction.rs  job.proto  job.rs  local_runtime.rs  mod.rs  remote_runtime.rs  runtime.rs  service.rs
engula/src/journal/: journal.proto  journal.rs  journal_service.rs  local_journal.rs  mod.rs  proto.rs  quorum_journal.rs  remote_journal.rs  service.rs  write.rs
engula/src/manifest/: local_manifest.rs  manifest.proto  manifest_service.rs  mod.rs  remote_manifest.rs  service.rs
engula/src/memtable/: btree_table.rs  memtable.rs  mod.rs  version.rs
engula/src/storage/: background_job.rs  hybrid_storage.rs  local_storage.rs  manifest.rs  mod.rs  parquet_storage.rs  sst_storage.rs  sstable_storage.rs  storage.rs
master/: Cargo.toml  build.rs
master/proto/: master.proto
master/src/: client.rs  lib.rs  master.rs  proto.rs  server.rs
master/tests/: main.rs
src/api/: Cargo.toml  build.rs
src/api/datatypes/: Cargo.toml
src/api/datatypes/src/: list.rs
src/api/engula/v1/: admin.proto  engula.proto  metadata.proto  store.proto
src/api/src/: error.rs  lib.rs  migration.rs  shard.rs
src/client/: Cargo.toml
src/client/examples/: any.rs  blob.rs  blob_v1.rs  collection.rs  database.rs  i64.rs  i64_v1.rs  int64.rs  kv.rs  list.rs  list_v1.rs  map.rs  map_v1.rs  set.rs  set_v1.rs  text.rs  tutorial.rs  txn.rs  universe.rs  unordered_map.rs
src/client/src/: any.rs  app_client.rs  client.rs  collection.rs  conn_manager.rs  database.rs  discovery.rs  engula_client.rs  error.rs  group_client.rs  lib.rs  metrics.rs  migrate_client.rs  node_client.rs  object.rs  retry.rs  root_client.rs  router.rs  shard_client.rs  txn.rs  txn_client.rs  typed.rs  universe.rs  universe_client.rs  value.rs
src/client/src/expr/: call.rs  call_expr.rs  macros.rs  mod.rs  simple.rs  subcall_expr.rs  value.rs
src/client/src/types/: any.rs  blob.rs  i64.rs  int64.rs  list.rs  map.rs  mod.rs  mutate.rs  select.rs  unordered_map.rs
src/client/src/v1/: database.rs  txn.rs  universe.rs
src/client/tests/: timeout_test.rs  transport_error_test.rs
src/client/tests/it/: api.rs  main.rs
src/cooperator/: Cargo.toml  build.rs
src/cooperator/src/: apis.rs  args.rs  collection.rs  cooperator.rs  error.rs  executor.rs  lib.rs  server.rs
src/engine/: Cargo.toml
src/engine/benches/: engine_bench.rs
src/engine/examples/: compact.rs
src/engine/hash/: Cargo.toml
src/engine/hash/src/: codec.rs  engine.rs  error.rs  format.rs  lib.rs  memtable.rs  table_builder.rs  table_reader.rs
src/engine/luna/: Cargo.toml
src/engine/src/: compact.rs  db.rs  key_space.rs  lib.rs  record.rs  stats.rs  time.rs
src/engula/: Cargo.toml
src/engula/client/: Cargo.toml
src/engula/cooperator/: Cargo.toml
src/engula/engula/: Cargo.toml
src/engula/src/: hello_unit.rs  lib.rs  main.rs  node.rs  server.rs
src/engula/supervisor/: build.rs
src/engula/transactor/: Cargo.toml
src/futures/: Cargo.toml
src/futures/src/: lib.rs
src/journal/: Cargo.toml  build.rs
src/journal/src/: error.rs  event_stream.rs  journal.rs  journal_stream.rs  lib.rs  stream.rs
src/kernel/: Cargo.toml  build.rs
src/kernel/cooperator/: Cargo.toml  build.rs
src/kernel/manifest/: Cargo.toml
src/kernel/src/: engine.rs  engine_update.rs  error.rs  kernel.rs  kernel_update.rs  lib.rs  manifest.rs  metadata.proto  metadata.rs  update.rs  update_builder.rs  version.rs
src/kernel/supervisor/: Cargo.toml  build.rs
src/kernel/transactor/: Cargo.toml
src/object-engine/client/: Cargo.toml
src/object-engine/filestore/: Cargo.toml
src/object-engine/lsmstore/: Cargo.toml  build.rs
src/object-engine/master/: Cargo.toml
src/platform/: Cargo.toml
src/platform/aws/: Cargo.toml
src/platform/src/: lib.rs
src/platform/storage/: Cargo.toml
src/runtime/: Cargo.toml
src/runtime/src/: lib.rs  runtime.rs
src/server/: Cargo.toml  build.rs
src/server/src/: bootstrap.rs  buffer.rs  client.rs  config.rs  connection.rs  constants.rs  cooperator.rs  database.rs  discovery.rs  error.rs  frame.rs  io_vec.rs  lib.rs  parse.rs  server.rs  serverpb.rs  session.rs  shutdown.rs  standalone.rs  supervisor.rs  timer.rs  transactor.rs  universe.rs  worker.rs
src/server/src/uio/: io.rs  (+7 more)
src/server/tests/: admin_test.rs  bootstrap_test.rs  client_test.rs  group_client_test.rs  group_test.rs  migration_test.rs  node_schedule_test.rs  rw_test.rs  snapshot_test.rs
src/storage/: Cargo.toml  Makefile.toml  build.rs
src/storage/src/: bucket.rs  bucket_handle.rs  error.rs  lib.rs  object.rs  object_storage.rs  storage.rs  storage_bucket.rs  storage_object.rs  uploader.rs
src/stream-engine/apis/: Cargo.toml  build.rs
src/stream-engine/client/: Cargo.toml
src/stream-engine/master/: Cargo.toml
src/stream-engine/store/: Cargo.toml
(+830 files in other folders)
