[workspace]
members = [
  "src/apis",
  "src/client",
  "src/kernel/cmd",
  "src/kernel/common",
  "src/kernel/cooperator",
  "src/kernel/supervisor",
  "src/kernel/transactor",
  "src/object-engine/common",
  "src/object-engine/client",
  "src/object-engine/master",
  "src/object-engine/lsmstore",
  "src/object-engine/filestore",
  "src/stream-engine/proto",
  "src/stream-engine/client",
  "src/stream-engine/common",
  "src/stream-engine/master",
  "src/stream-engine/store",
]
