[package]
name = "engula"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
keywords = ["cache", "database"]
categories = ["database", "data-structures"]
description = "A distributed key-value store."

[dependencies]
tonic = "0.7.2"
prost = "0.10.3"

[build-dependencies]
tonic-build = "0.7.2"
