[workspace]
members = ["src/api", "src/bin", "src/client", "src/engine", "src/server"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"

[workspace.dependencies]
async-stream = "0.3"
crc32fast = "1.3"
derivative = "2.2"
futures = "0.3"
lazy_static = "1.4"
num_cpus = "1.13"
paste = "1.0"
prometheus = "0.13"
prometheus-static-metric = "0.5"
prost = "0.11"
prost-types = "0.11"
rand = "0.8"
rustyline = "10.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.8"
thiserror = "1.0"
toml = "0.5"
tokio = { version = "1.21", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"

# for build
prost-build = "0.11"
tonic-build = "0.8"
protoc-build = { git = "https://github.com/w41ter/protoc-build.git", rev = "v3.21.5" }
