[package]
name = "engula-api"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula API."

[dependencies]
crc32fast = "1.3.2"
tonic = "0.7.2"
prost = "0.10.3"
prost-types = "0.10.1"

[build-dependencies]
tonic-build = "0.7.2"
