[package]
name = "engula-api"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula API."

[dependencies]
crc32fast = "1.3.2"
tonic = "0.8.0"
prost = "0.11.0"
prost-types = "0.11.1"

[build-dependencies]
tonic-build = "0.8.0"
