[package]
name = "engula-client"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula API."

[dependencies]
engula-api = { version = "0.4", path = "../api" }

crc32fast = "1.3.2"
derivative = "2.2.0"
futures = "0.3.24"
prost = "0.10.3"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.7.2"
tracing = "0.1"

[dev-dependencies]
ctor = "0.1.22"
socket2 = "0.4.4"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
