[package]
name = "engula-engine"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula server."

[dependencies]
bitflags = "1.3.2"
hashbrown = { version = "0.12.0", features = ["raw"] }
lazy_static = "1.4.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
