[package]
name = "engula-engine"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula server."

[dependencies]
bitflags = "1.3.2"
hashbrown = { git = "https://github.com/w41ter/hashbrown", features = ["raw"] }
lazy_static = "1.4.0"
libc = { version = "0.2.124" }
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]

[profile.dev]
panic = 'abort'
