[package]
name = "engula-engine"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula server."

[dependencies]
bitflags = "1.3.2"
bytes = "1.1"
futures = "0.3"
hashbrown = { git = "https://github.com/w41ter/hashbrown.git", features = [
  "raw",
] }
rand = "0.8.5"
monoio = "0.0.4"
