[package]
name = "engula"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
keywords = ["database", "storage-engine"]
categories = [
  "asynchronous",
  "data-structures",
  "database",
  "database-implementations",
]
description = "The Engula command line tool."

[dependencies]
object-engine-master = { path = "../object-engine/master" }
stream-engine-master = { path = "../stream-engine/master" }
supervisor = { path = "../supervisor" }
transactor = { path = "../transactor" }

anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
prost = "0.9"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"
