[package]
name = "engula-journal"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula module that provides stream storage abstractions and implementations."

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.13", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
prost = "0.9"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.6"
