[package]
name = "engula-journal"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula module that provides stream storage abstractions and implementations."

[dependencies]
engula-futures = { version = "0.3.0", path = "../futures" }

async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1.13", features = ["full"] }

[dev-dependencies]
tempfile = "3"
