[package]
name = "engula-kernel"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula module that provides stateful environment abstractions and implementations."

[dependencies]
engula-journal = { path = "../journal" }
engula-storage = { path = "../storage" }

thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.14", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
