[package]
name = "engula-kernel"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula module that provides stateful environment abstractions and implementations."

[dependencies]
engula-futures = { version = "0.3.0", path = "../futures" }
engula-journal = { version = "0.3.0", path = "../journal" }
engula-storage = { version = "0.3.0", path = "../storage" }

async-trait = "0.1"
futures = "0.3"
prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.6"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.6"
