[package]
name = "engula-runtime"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula asynchronous runtime."

[dependencies]
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
