[package]
name = "engula-server"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula server."

[dependencies]
engula-api = { path = "../api", version = "0.4.0" }
engula-client = { path = "../client", version = "0.4.0" }

async-stream = "0.3.3"
crc32fast = "1.3.2"
futures = "0.3.21"
http-body = "0.4.5"
lazy_static = "1.4.0"
paste = "1.0"
prometheus = { version = "0.13.0", features = ["process"] }
prometheus-static-metric = "0.5.1"
prost = "0.10.3"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "0.7.2"
tracing = "0.1"
uuid = { version = "1.1.1", features = ["v4"] }
num_cpus = "1.13"
rand = "0.8"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.3", features = ["time"] }

[dependencies.raft]
git = "https://github.com/w41ter/raft-rs.git"
features = ["prost-codec", "default-logger"]
default-features = false

[dependencies.raft-engine]
git = "https://github.com/w41ter/raft-engine.git"
default-features = false
features = ["prost"]

[dependencies.rocksdb]
git = "https://github.com/w41ter/rust-rocksdb.git"
default-features = false
features = ["multi-threaded-cf"]
version = "0.18.0"

[build-dependencies]
prost-build = "0.10.3"
tonic-build = "0.7.2"

[dev-dependencies]
ctor = "0.1.22"
socket2 = "0.4.4"
tempdir = "0.3.7"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
