[package]
name = "engula-server"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula server."

[dependencies]
engula-api = { path = "../api", version = "0.4.0" }
engula-client = { path = "../client", version = "0.4.0" }

async-stream = "0.3.3"
crc32fast = "1.3.2"
const-str = "0.4.3"
futures = "0.3.24"
http-body = "0.4.5"
lazy_static = "1.4.0"
libc = "0.2"
paste = "1.0"
pin-project = "1"
prometheus = { version = "0.13.2", features = ["process"] }
prometheus-static-metric = "0.5.1"
prost = "0.11.0"
thiserror = "1.0.34"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.8.1"
tracing = "0.1"
uuid = { version = "1.1.2", features = ["v4"] }
num_cpus = "1.13"
rand = "0.8"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.26.2"
tokio-util = { version = "0.7.4", features = ["time"] }
url = "2.3.1"

[dependencies.raft]
git = "https://github.com/w41ter/raft-rs.git"
features = ["prost-codec", "default-logger"]
default-features = false
branch = "prost-0.11"

[dependencies.raft-engine]
git = "https://github.com/w41ter/raft-engine.git"
default-features = false
features = ["prost"]
branch = "prost-0.11"

[dependencies.rocksdb]
git = "https://github.com/w41ter/rust-rocksdb.git"
features = ["multi-threaded-cf", "serde1"]
branch = "v7.4.4-patched"

[build-dependencies]
prost-build = "0.11.1"
tonic-build = "0.8.0"
protoc-build = { git = "https://github.com/w41ter/protoc-build.git", rev = "v3.21.5" }

[dev-dependencies]
ctor = "0.1.23"
socket2 = "0.4.7"
tempdir = "0.3.7"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = { version = "0.11", features = ["json"] }
