[package]
name = "engula-server"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The Engula server."

[dependencies]
engula-api = { path = "../api", version = "0.5" }
engula-client = { path = "../client", version = "0.5" }

async-stream.workspace = true
crc32fast.workspace = true
futures.workspace = true
lazy_static.workspace = true
paste.workspace = true
prometheus = { workspace = true, features = ["process"] }
prometheus-static-metric.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true

const-str = "0.4"
http-body = "0.4"
hyper = "0.14"
libc = "0.2"
pin-project = "1"
uuid = { version = "1.1", features = ["v4"] }
serde_json = "1.0"
sysinfo = "0.26"
tokio-util = { version = "0.7", features = ["time"] }
url = "2.3"

[dependencies.raft]
git = "https://github.com/w41ter/raft-rs.git"
features = ["prost-codec", "default-logger"]
default-features = false
branch = "prost-0.11"

[dependencies.raft-engine]
git = "https://github.com/w41ter/raft-engine.git"
default-features = false
features = ["prost"]
branch = "prost-0.11"

[dependencies.rocksdb]
git = "https://github.com/w41ter/rust-rocksdb.git"
features = ["multi-threaded-cf", "serde1"]
branch = "v7.4.4-patched"

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
protoc-build.workspace = true

[dev-dependencies]
ctor = "0.1"
socket2 = "0.4"
tempdir = "0.3"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
rand = { version = "0.8", features = ["small_rng"] }
reqwest = { version = "0.11", features = ["json"] }
