[package]
name = "engula-storage"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula module that provides object storage abstractions and implementations."

[dependencies]
engula-futures = { version = "0.3.0", path = "../futures" }

async-trait = "0.1"
bytes = "1.1.0"
futures = "0.3"
prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.13", features = ["full"] }

aws-config = "0.5.2"
aws-sdk-s3 = "0.5.2"
aws-smithy-http = "0.35.2"
time = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.6"
