[package]
name = "engula-storage"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula module that provides object storage abstractions and implementations."

[dependencies]
engula-futures = { version = "0.3.0", path = "../futures" }

async-trait = "0.1"
aws-config = "0.5.2"
aws-sdk-s3 = "0.5.2"
aws-smithy-http = "0.35.2"
bytes = "1.1.0"
futures = "0.3"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.13", features = ["full"] }

[dev-dependencies]
tempfile = "3"
