[package]
name = "engula-hash-engine"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "A simple key-value storage engine."

[dependencies]
engula-kernel = { path = "../../kernel" }
engula-journal = { path = "../../journal" }
engula-storage = { path = "../../storage" }

async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
bytes = "1.1"
futures = "0.3"
