[package]
name = "hash-engine"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula engine that provides simple key-value storage."

[dependencies]
engula-kernel = { version = "0.2", path = "../../kernel" }
engula-journal = { version = "0.2", path = "../../journal" }
engula-storage = { version = "0.2", path = "../../storage" }

thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
bytes = "1.1"
futures = "0.3"
