[package]
name = "hash-engine"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "An Engula engine that provides simple key-value storage."

[dependencies]
engula-journal = { version = "0.3.0", path = "../../journal" }
engula-kernel = { version = "0.3.0", path = "../../kernel" }
engula-storage = { version = "0.3.0", path = "../../storage" }

bytes = "1.1"
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
