[package]
name = "luna-engine"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "A transactional key-value storage engine."

[dependencies]
bytes = "1.1.0"
futures = "0.3.17"
thiserror = "1.0.3"
tokio = { version = "1.15.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.2.0"
