[package]
name = "luna-engine"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "A transactional key-value storage engine."

[dependencies]
engula-futures = { version = "0.3.0", path = "../../futures" }
engula-journal = { version = "0.3.0", path = "../../journal" }
engula-kernel = { version = "0.3.0", path = "../../kernel" }
engula-storage = { version = "0.3.0", path = "../../storage" }

bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.3"
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tempfile = "3.2.0"
