[package]
name = "engula-transactor"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The Engula transactor."

[dependencies]
engula-apis = { version = "0.3", path = "../../apis" }
engula-common = { version = "0.3", path = "../common" }
engula-cooperator = { version = "0.3", path = "../cooperator" }
engula-supervisor = { version = "0.3", path = "../supervisor" }

prost = "0.9"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"
