[package]
name = "object-engine-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
engula-apis = { version = "0.3", path = "../../apis" }
object-engine-master = { version = "0.1", path = "../master" }

prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"

[dev-dependencies]
anyhow = "1.0"
