[package]
name = "object-engine-filestore"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The file store for Object Engine."

[dependencies]
object-engine-common = { version = "0.3", path = "../common" }

bytes = "1.1.0"
tokio = { version = "1.15", features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"
