[package]
name = "object-engine-lsmstore"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The LSM store for Object Engine."

[dependencies]
object-engine-common = { version = "0.3", path = "../common" }
object-engine-filestore = { version = "0.3", path = "../filestore" }

bytes = "1.1"
prost = "0.9"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"
crc = "2.1.0"

[dev-dependencies]
tempdir = "0.3.7"

[build-dependencies]
tonic-build = "0.6"
