[package]
name = "object-engine-master"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
object-engine-common = { version = "0.1", path = "../common" }
object-engine-filestore = { version = "0.1", path = "../filestore" }

prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
