[package]
name = "object-engine-master"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The master for Object Engine."

[dependencies]
object-engine-common = { version = "0.3", path = "../common" }
object-engine-filestore = { version = "0.3", path = "../filestore" }

prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
