[package]
name = "object-engine-master"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
repository = "https://github.com/engula/engula"
description = "The master for Object Engine."

[dependencies]
object-engine-common = { version = "0.3", path = "../common" }
object-engine-filestore = { version = "0.3", path = "../filestore" }
object-engine-lsmstore = { version = "0.3", path = "../lsmstore" }

prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
tonic = "0.6"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6"
